--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.8",
+    "jwt-decode": "^4.0.0",
     "nuxt": "^3.17.4",
-    "vue": "^3.5.14",
+    "swiper": "^11.2.8",
+    "tailwindcss": "^4.1.8",
+    "vue": "^3.5.15",
     "vue-router": "^4.5.1"
   }
 }
