--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "nuxt": "^3.17.4",
