--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "axios": "^1.12.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
