--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@tailwindcss/vite": "^4.1.8",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
