--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "@googlemaps/js-api-loader": "^2.0.0",
     "@tailwindcss/vite": "^4.1.8",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
