--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,9 @@ CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key_for_backend
+
+ADMIN_EMAIL=admin@example.com
+ADMIN_USERNAME=admin123
+ADMIN_PASSWORD=123456789
+ADMIN_FIRST_NAME=System
+ADMIN_LAST_NAME=Administrator
